--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "slim/twig-view": "^2.3"
+        "slim/twig-view": "^2.3",
+        "php-curl-class/php-curl-class": "^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
